# smelter

./: Cargo.toml  LICENSE_APACHE  README.md
crates/aws-fargate/: Cargo.toml
crates/aws-fargate/sample_orchestration/: README.md  fargate.tf  register_task_definition.mjs  run_example.sh
crates/aws-fargate/src/: client.rs  lib.rs  spawner.rs  worker.rs
crates/aws-lambda/: Cargo.toml
crates/aws-lambda/src/: spawner.rs
crates/job-manager/: Cargo.toml
crates/job-manager/src/: job.rs  lib.rs  manager.rs  run_subtask.rs  scheduler.rs  spawn.rs  stage.rs  task_status.rs  test_util.rs
crates/job-manager/src/manager/: run_subtask.rs  tests.rs
crates/job-manager/src/spawn/: fail_wrapper.rs  inprocess.rs  local.rs
crates/local-jobs/: Cargo.toml
crates/local-jobs/src/: lib.rs  spawner.rs
crates/worker/: Cargo.toml
crates/worker-lambda/: Cargo.toml
crates/worker/src/: lib.rs  stats.rs
examples/simple-local-jobs/: Cargo.toml
examples/simple-local-jobs/src/: main.rs  subtasks.rs
