[package]
name = "smelter-aws-fargate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
aws-config = { version = "1.1.7", optional = true, features = ["behavior-version-latest"] }
aws-sdk-ecs = { version = "1.16.0", optional = true }
aws-sdk-s3 = "1.17.0"
aws-smithy-runtime-api = { version = "1.1.7", features = ["client"] }
error-stack = "0.4.1"
eyre = "0.6.12"
futures = "0.3.30"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.114"
smelter-job-manager = { path = "../job-manager", optional = true }
smelter-worker = { path = "../worker", optional = true }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["time"] }
tracing = "0.1.40"
url = "2.5.0"

[features]
default = ["worker", "spawner", "stats", "opentelemetry"]
stats = ["smelter-worker/stats"]
spawner = ["dep:aws-sdk-ecs", "dep:aws-config", "dep:smelter-job-manager"]
worker = ["dep:smelter-worker"]
opentelemetry = ["smelter-worker/opentelemetry"]
