[package]
name = "smelter-aws-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-lambda = { version = "0.28.0", optional = true }
lambda_runtime = { version = "0.8.1", optional = true }

[features]
default = ["worker", "spawner"]
spawner = ["dep:aws-sdk-lambda"]
worker = ["dep:lambda_runtime"]
