[package]
name = "smelter-aws-lambda"
version = "0.1.0"
edition = "2021"
description = "AWS Lambda execution adapter for the Smelter job orchestration framework"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dimfeld/smelter"
homepage = "https://github.com/dimfeld/smelter"
documentation = "https://docs.rs/smelter-aws-lambda"
# Not implemented yet
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-lambda = { version = "0.28.0", optional = true }
lambda_runtime = { version = "0.8.3", optional = true }

[features]
default = ["worker", "spawner"]
spawner = ["dep:aws-sdk-lambda"]
worker = ["dep:lambda_runtime"]
