[package]
name = "job-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
async-trait = "0.1.73"
aws-sdk-lambda = { version = "0.28.0", optional = true }
error-stack = { version = "0.4.0", features = ["serde", "eyre"] }
eyre = "0.6.8"
flume = "0.11.0"
futures = "0.3.28"
serde = { version = "1.0.186", features = ["derive"] }
tempfile = "3.8.0"
thiserror = "1.0.47"
time = { version = "0.3.27", features = ["serde"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"

[features]
default = ["inprocess", "aws_lambda"]
inprocess = []
aws_lambda = ["aws-sdk-lambda"]

[dev-dependencies]
once_cell = "1.18.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-tree = "0.2.4"
