[package]
name = "smelter-job-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
async-trait = "0.1.73"
error-stack = { version = "0.4.0", features = ["serde", "eyre"] }
eyre = "0.6.8"
flume = "0.11.0"
futures = "0.3.28"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
time = { version = "0.3.27", features = ["serde"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"

[features]
default = ["inprocess"]
inprocess = []

[dev-dependencies]
once_cell = "1.18.0"
tempfile = "3.8.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-tree = "0.2.4"
