[package]
name = "smelter-job-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.9"
async-trait = "0.1.77"
error-stack = { version = "0.4.1", features = ["serde", "eyre"] }
eyre = "0.6.12"
flume = "0.11.0"
futures = "0.3.30"
smelter-worker = { path = "../worker", default-features = false, features = ["spawner-side"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
time = { version = "0.3.34", features = ["serde"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v7", "serde"] }
parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] }

[features]
default = ["inprocess"]
inprocess = ["smelter-worker/worker-side"]

[dev-dependencies]
once_cell = "1.19.0"
tempfile = "3.10.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.2.5"
