[package]
name = "smelter-local-jobs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
error-stack = { version = "0.4.1", features = ["serde", "eyre"] }
smelter-job-manager = { path = "../job-manager" }
smelter-worker = { path = "../worker" }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
serde_json = "1.0.114"
tokio-stream = { version = "0.1.14", features = ["io-util"] }
futures = "0.3.30"

[dev-dependencies]
tempfile = "3.10.1"

