[package]
name = "smelter-local-jobs"
version = "0.1.0"
edition = "2021"
description = "Local job execution adapter for the Smelter job orchestration framework"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dimfeld/smelter"
homepage = "https://github.com/dimfeld/smelter"
documentation = "https://docs.rs/smelter-local-jobs"

[dependencies]
async-trait = "0.1.77"
error-stack = { version = "0.4.1", features = ["serde", "eyre"] }
smelter-job-manager = { path = "../job-manager", version = "0.1.0" }
smelter-worker = { path = "../worker", version = "0.1.0" }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
serde_json = "1.0.114"
tokio-stream = { version = "0.1.14", features = ["io-util"] }
futures = "0.3.30"
rand = "0.8.5"
thiserror = "1.0.57"

[dev-dependencies]
tempfile = "3.10.1"
uuid = { version = "1.7.0", features = ["v7", "serde"] }

[features]
# Collect OS-level statistics about the tasks.
stats = ["smelter-worker/stats"]
