[package]
name = "smelter-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.4.1"
opentelemetry = { version = "0.20.0", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = { version = "0.1.40", optional = true }
tracing-opentelemetry = { version = "0.20.0", optional = true }
uuid = { version = "1.7.0", features = ["v7", "serde"] }

[features]
default = ["opentelemetry", "spawner-side", "worker-side"]
# Propagate opentelemetry context from the job manager to the workers.
opentelemetry = ["dep:opentelemetry", "dep:tracing", "dep:tracing-opentelemetry"]
worker-side = []
# Functionality only used by the Smelter job spawners and the job manager.
spawner-side = []
