[package]
name = "simple-local-jobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
clap = { version = "4.5.1", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
error-stack = "0.4.1"
ratatui = "0.26.1"
smelter-job-manager = { path = "../../crates/job-manager" }
smelter-local-jobs = { path = "../../crates/local-jobs" }
tokio = "1.36.0"
