[package]
name = "simple-local-jobs"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
error-stack = "0.4.1"
eyre = "0.6.12"
rand = "0.8.5"
ratatui = "0.26.1"
smelter-job-manager = { path = "../../crates/job-manager", version = "0.1.0" }
smelter-local-jobs = { path = "../../crates/local-jobs", version = "0.1.0" }
smelter-worker = { path = "../../crates/worker", version = "0.1.1", features = ["stats"] }
tokio = "1.36.0"
